namespace PrototypeDesignPattern.Interfaces;

public interface IPrototype<T>
{
    T Clone();
}